# vis-decode-analysis

./: .Rhistory  .gitattributes  .gitignore  README.md  _quarto.yml  analysis.html  analysis.qmd  brms-syntax.html  brms-syntax.qmd  combined.ai  main.py  mixture-model.html  mixture-model.qmd  mixture-model.rmarkdown  mixture-tutorial-2.html  mixture-tutorial-2.qmd  mixture-tutorial.html  mixture-tutorial.qmd  mixture.1  mixture.1.stan  model.html  model.qmd  model.rmarkdown  models-multiple-tasks3&5.qmd  models-single-task2.html  models-single-task2.qmd  models-single-task2.rmarkdown  models-single-task4.qmd  models-single-tasks3&5.html  models-single-tasks3&5.qmd  models-single-tasks3&5.rmarkdown  models-task1.html  models-task1.qmd  models-task2.html  models-task2.qmd  models-task2.rmarkdown  models-task4.qmd  models-tasks3&5.qmd  plot_sgt.R  pyproject.toml  (+6 more)
PyMC/: learn_pymc.ipynb  task1.ipynb  task3&5.ipynb
R/: helpers.R
mix_models/: .gitignore  m1.stan  mix.laplace.2  mix.laplace.3  mix.laplace.3.stan  mixture.1.stan  mixture.laplace  mixture.laplace.stan  sheng.m1.rds  sheng.mix.1  sheng.mix.1.stan  sheng.mix.2.1  sheng.mix.2.2  sheng.mix.2.2.2.stan  sheng.mix.2.3  sheng.mix.2.4  sheng.mix.2.4.stan  sheng.mix.2.5  sheng.mix.2.5.stan  sheng.mix.2.5_scaled.stan  sheng.mix.2.5_scaled_imse.stan  sheng.mix.2.5_scaled_square.stan  sheng.mix.2.5_scaled_weighted_imse.stan  sheng.mix.2.5_scaled_weighted_square.stan  sheng.mix.2.6.stan  sheng.mix.2.stan
models/: m3.2.rds  m3.rds  m5.1.x.rds  m5.2.1.x.rds  m5.2.2.x.rds  m5.2.x.rds  m5.2.y.rds  m5.rds  m5.x.rds  m5.y.rds  (+23 more)
(+105 files in other folders)
