[project]
name = "vis-decode-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arviz>=0.23.0",
    "cmdstanpy>=1.3.0",
    "graphviz>=0.21",
    "jupyter>=1.1.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "pymc>=5.26.1",
    "seaborn>=0.13.2",
]
